// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tailwind Options Exporter converts deeply nested configs, with flat:false: level-default 1`] = `
"/* Converted Tailwind Config to scss */
$customForms: (
  colors-blue: blue,
  colors-green: green,
  somethingElse-level1-color: pink,
  somethingElse-level1-arrayValue: (a,b,c),
  somethingElse-level1-nestedB-color: nested,
  somethingElse-level1-nestedB-padding: much,
  somethingElse-level1-nestedB-thing: thing,
  somethingElse-level1-nestedB-nestedC-color: nestedC,
  somethingElse-level1-nestedB-nestedC-nestedD-color: nestedD,
  somethingElse-level1-nestedB-nestedC-nestedD-color2: color2,
  somethingElse-level1-nestedB-nestedC-nestedD-nestedE-color: nestedE,
);

$customColors: (
  colors-blue: NotBlue,
  colors-green: notGreen,
);
"
`;

exports[`Tailwind Options Exporter converts deeply nested configs, with flat:false: level0 1`] = `
"/* Converted Tailwind Config to scss */
$customForms: (
  colors: (
    blue: blue,
    green: green,
  ),
  somethingElse: (
    level1-color: pink,
    level1-arrayValue: (a,b,c),
    level1-nestedB-color: nested,
    level1-nestedB-padding: much,
    level1-nestedB-thing: thing,
    level1-nestedB-nestedC-color: nestedC,
    level1-nestedB-nestedC-nestedD-color: nestedD,
    level1-nestedB-nestedC-nestedD-color2: color2,
    level1-nestedB-nestedC-nestedD-nestedE-color: nestedE,
  ),
);

$customColors: (
  colors: (
    blue: NotBlue,
    green: notGreen,
  ),
);
"
`;

exports[`Tailwind Options Exporter converts deeply nested configs, with flat:false: level2 1`] = `
"/* Converted Tailwind Config to scss */
$customForms: (
  colors: (
    blue: blue,
    green: green,
  ),
  somethingElse: (
    level1: (
      color: pink,
      arrayValue: (a,b,c),
      nestedB: (
        color: nested,
        padding: much,
        thing: thing,
        nestedC-color: nestedC,
        nestedC-nestedD-color: nestedD,
        nestedC-nestedD-color2: color2,
        nestedC-nestedD-nestedE-color: nestedE,
      ),
    ),
  ),
);

$customColors: (
  colors: (
    blue: NotBlue,
    green: notGreen,
  ),
);
"
`;

exports[`Tailwind Options Exporter converts deeply nested configs, with flat:false: level3 1`] = `
"/* Converted Tailwind Config to scss */
$customForms: (
  colors: (
    blue: blue,
    green: green,
  ),
  somethingElse: (
    level1: (
      color: pink,
      arrayValue: (a,b,c),
      nestedB: (
        color: nested,
        padding: much,
        thing: thing,
        nestedC: (
          color: nestedC,
          nestedD-color: nestedD,
          nestedD-color2: color2,
          nestedD-nestedE-color: nestedE,
        ),
      ),
    ),
  ),
);

$customColors: (
  colors: (
    blue: NotBlue,
    green: notGreen,
  ),
);
"
`;

exports[`Tailwind Options Exporter converts deeply nested configs, with flat:true 1`] = `
"/* Converted Tailwind Config to scss */
$customForms-colors-blue: blue;
$customForms-colors-green: green;
$customForms-somethingElse-level1-color: pink;
$customForms-somethingElse-level1-arrayValue: (a,b,c);
$customForms-somethingElse-level1-nestedB-color: nested;
$customForms-somethingElse-level1-nestedB-padding: much;
$customForms-somethingElse-level1-nestedB-thing: thing;
$customForms-somethingElse-level1-nestedB-nestedC-color: nestedC;
$customForms-somethingElse-level1-nestedB-nestedC-nestedD-color: nestedD;
$customForms-somethingElse-level1-nestedB-nestedC-nestedD-color2: color2;
$customForms-somethingElse-level1-nestedB-nestedC-nestedD-nestedE-color: nestedE;

$customColors-colors-blue: NotBlue;
$customColors-colors-green: notGreen;
"
`;

exports[`Tailwind Options Exporter skips options that are disabled in \`corePlugins\` using the array pattern 1`] = `
"/* Converted Tailwind Config to scss */
$cursor: (
  auto: auto,
  default: default,
  pointer: pointer,
  wait: wait,
  text: text,
  move: move,
  not-allowed: not-allowed,
);
"
`;
